# ObsyncGit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  config.example.yaml  release-please-config.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-delete-branches.yml  builds.yml  ci.yml  enforce-develop-pr.yml  enforce-main-pr.yml  promote-main.yml  release-please.yml  release.yml  semantic-pr.yml  sync-develop.yml
examples/: git-syncd.plist  git-syncd.service  obsyncgit.plist  obsyncgit.service
scripts/: install.ps1  install.sh
src/: config.rs  daemon.rs  git.rs  ignore.rs  lib.rs  main.rs  updater.rs
ui/: configurator.slint
