[package]
name = "ObsyncGit"
version = "0.3.0"
edition = "2024"
authors = ["GezzyDax <me@gezzy.ru>"]
description = "Lightweight git-based folder synchronizer daemon"
license = "MIT"
build = "build.rs"

[lib]
name = "obsyncgit"
path = "src/lib.rs"

[features]
default = []
gui = [
    "dep:slint",
    "dep:image",
    # Platform-specific tray icon support is wired in via target dependencies.
]

[dependencies]
anyhow = "1"
camino = { version = "1.2", features = ["serde1"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
ctrlc = "3"
directories = "6"
globset = "0.4"
notify = "8.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4", features = ["derive"] }
self_update = "0.42"
humantime = "2"
slint = { version = "1.5", optional = true, features = ["backend-winit", "renderer-femtovg"] }
image = { version = "0.24", optional = true, default-features = false, features = ["png"] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
tray-icon = { version = "0.11", optional = true }

[build-dependencies]
slint-build = { version = "1.5" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "obsyncgit"
path = "src/main.rs"

[[bin]]
name = "obsyncgit-gui"
path = "src/bin/obsyncgit-gui.rs"
required-features = ["gui"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
